@@ -56,7 +56,8 @@ requires (
   'Plack'                          => 0,
   'Scalar::Does'                   => 0,
   'Scalar::Util'                   => 0,
-  'SQL::Abstract::FromQuery'       => 0.08,
+  'SQL::Abstract::FromQuery'       => 0.10,
+  'SQL::Abstract::More'            => 1.27,
   'Template'                       => 0,
   'Time::HiRes'                    => 0,
   'Try::Tiny'                      => 0,
